added red marker

--- a/models/red_marker/model.config
+++ b/models/red_marker/model.config
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>test</name>
+  <name>red_marker</name>
   <version>1.0</version>
   <sdf version="1.5">model.sdf</sdf>
 
   <author>
-    <name>Maurice Fallon</name>
+    <name>Grace Pearcey</name>
   </author>
 
   <description>
-    test
+    Red Marker
   </description>
 </model>
